--- a/style.css
+++ b/style.css
@@ -161,3 +161,107 @@ body
     justify-content: center;
     font-family: var(--main-font);
 }
+/*tablet*/
+@media(max-width: 768px){
+    
+    .main-content{
+        flex-direction: column;
+        padding: 10px;
+        height: 1300px;
+        flex-wrap: nowrap;
+        justify-content: normal;
+    }
+    .input-container
+    {
+        align-self: auto;
+        padding-top: 10%;
+        width: 100%;
+        height: 350px;
+        flex-wrap: nowrap;
+    }
+    .input-text
+    {
+        display: flex;
+        width: 100%;
+        flex-wrap: nowrap;
+    }
+    .content-wrapper
+    {
+        align-self: center;
+        justify-content: normal;
+    }
+    .buttons-container{
+        width: 103%;
+        padding-left: 2%;
+        align-self: center;
+    }
+    .result-container
+    {
+        width: 90%;
+        height: 30%;
+        padding: 5%;
+        justify-content: normal;
+    }
+    .hidden{
+        align-self: center;
+    }
+    .result-text
+    {
+        align-self: flex-start;
+        margin-top: 0;
+        height: 60%;
+    }
+    .button-copy{
+        width: 100%;
+        height: 15%;
+        margin-top: 20%;
+        justify-content: flex-end;
+    }
+}
+/*celular*/
+@media(max-width: 767px){
+    .main-content{
+        display: block;
+        flex-direction: column;
+        padding: 10px;
+        width: auto;
+        justify-content: normal;
+    }
+    .logo-image{
+        width: 60px;
+        height: 24px;
+    }
+    .buttons-container{
+        width: 100%;
+        padding-left: 2%;
+        flex-direction: column;
+        align-items: center;
+        height: 10%;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .button-encrypt
+    {
+        width: 100%;
+        margin: 5%;
+    }
+    .button-dencrypt
+    {
+        width: 100%;
+    }
+    .input-container
+    {
+        align-self: auto;
+        padding-top: 10%;
+        width:90%;
+        height: 350px;
+        flex-wrap: nowrap;
+    }
+    .input-text
+    {
+        display: flex;
+        width: 100%;
+        flex-wrap: nowrap;
+    }
+    
+}
